Started populating the online CV

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -37,7 +37,9 @@
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="university">{{ graduation.university }}</div>
+				<div class=""><b>{{ graduation.result }}</b></div>
+      	<div class="university">{{ graduation.university }}</div>
+
       </div><!--//meta-->
 
       {% if graduation.details %}
